# ts-bind

./: Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yaml
crates/macros/: Cargo.toml
crates/macros/src/: error.rs  files.rs  lib.rs  rename_all.rs  struct_attrs.rs  ts_bind.rs
crates/macros/src/parsers/: mod.rs  struc.rs
crates/macros/src/ts/: gen_ts_code.rs  mod.rs  ts_map.rs
crates/ts/: Cargo.toml
crates/ts-bind/: Cargo.toml
crates/ts-bind/src/: lib.rs
