[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
version = "0.1.7"
license = "MIT"
edition = "2021"
repository = "https://github.com/dcodesdev/ts-bind"
keywords = ["TypeScript", "Bindings", "Rust", "Full-Stack"]
categories = ["web-programming", "development-tools"]
readme = "README.md"

[workspace.dependencies]
ts-bind-macros = { version = "0.1", path = "crates/macros" }
ts-bind = { version = "0.1", path = "crates/ts-bind" }

