[package]
name = "ts-bind"
description = "A simple and easy to use Rust crate for TypeScript bindings"
readme.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ts-bind-macros = { workspace = true }
